fixed misaligned form-error-box (div element which contains error message)

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -230,7 +230,7 @@ input, textarea, select
   top: 1em
 
 #form-error-box
-  margin: 0px 200px 0px 160px
+  margin: 0px 200px 0px 176px
   padding: 6px
   color: $error-color
 
